feat: gps데이터 ID만 리턴하는 API 추가
